--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/style.css">
-        <script src="vendor/phaser.min.js"></script>
+        <script src="vendor/phaser.min.2.10.js"></script>
         <script data-main="js/app" src="vendor/require.js"></script>
     </head>
     <body>
