node-webkit fix

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/style.css">
+		<script type="text/javascript">
+			window.requireNode = window.require;
+			window.require = undefined; 
+		</script>
         <script src="vendor/phaser.min.2.10.js"></script>
         <script data-main="js/app" src="vendor/require.js"></script>
     </head>
